--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,11 @@
 <h1>Export</h1>
 <hr />
-<div fxLayoutAlign="center center">
+<div fxLayoutAlign="start start">
   <div class="w-100" fxLayout="row wrap">
-    <div fxFlex.xl="50"  fxFlex.sm="100" >
+    <div fxFlex.xl="50" fxFlex.lg="50" fxFlex.md="50" fxFlex.sm="100" fxFlex.xs="100" >
       <button class="export-button" (click)="export()">Export as Word</button>
     </div>
-    <div fxFlex.xl="50"  fxFlex.sm="100" >
+    <div fxFlex.xl="50" fxFlex.lg="50" fxFlex.md="50" fxFlex.sm="100" fxFlex.xs="100" >
       <button class="export-button" (click)="export()">Export as Word</button>
     </div>
   </div>
