--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div fxLayoutAlign="start start">
   <div class="w-100" fxLayout="row wrap">
     <div fxFlex.xl="50" fxFlex.lg="50" fxFlex.md="50" fxFlex.sm="100" fxFlex.xs="100" >
-      <button class="export-button" (click)="export()">Export as Word</button>
+      <pre>{{data | json}}</pre>
     </div>
     <div fxFlex.xl="50" fxFlex.lg="50" fxFlex.md="50" fxFlex.sm="100" fxFlex.xs="100" >
       <button class="export-button" (click)="export()">Export as Word</button>
