Added a title to the word doc

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,7 @@
     background-color: #3268a8;
     color: #FFFFFF;
     border:none;
+    border-radius: 5px;
     cursor: pointer;
     &:hover{
         background-color: #11325c85;
